force-app/main/default/objects/Welch_Allyn_Opportunity__c/Welch_Allyn_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Welch Allyn Opportunity</label>
    <nameField>
        <label>Welch Allyn Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Welch Allyn Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>