force-app/main/default/objects/Welch_Allyn_Opportunity__c/fields/Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Owner_Title__c</fullName>
    <label>Owner Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>