force-app/main/default/objects/Welch_Allyn_Opportunity__c/fields/Welch_Allyn_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Welch_Allyn_Opportunity_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Welch Allyn Opportunity Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>